<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_filter">Filter</string>
    <string name="overview_sample">In the near future, a weary Logan cares for an ailing Professor X in a hideout on the Mexican border. But Logan\'s attempts to hide from the world and his legacy are upended when a young mutant arrives, pursued by dark forces.</string>
    <string name="sort_by">Sort By:</string>
    <string name="popularity">Popularity</string>
    <string name="rating">Rating</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="rating_value">%.1f/10</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews_yet">No reviews yet.</string>
    <string name="api_url">https://api.themoviedb.org/3/</string>
    <string name="prompt_no_fovorites">You have no favorites. Your favorites will appear here later.</string>
    <string name="prompt_choose_movie">Choose a movie to know more.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_info">Info</string>
    <string name="menu_trailers">Trailers</string>
    <string name="menu_reviews">Reviews</string>
    <string name="overview">Overview</string>
    <string name="no_review">No Reviews Available</string>
    <string name="no_trailers">No Trailers Available.</string>
    <string name="title_popular">Popular Movies</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_favorites">Your Favorites</string>
</resources>
