<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="auto"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="@dimen/padding_filter_layout"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="@dimen/padding_filter_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popularity">

        <ImageView
            android:layout_width="@dimen/ic_filter_dimen"
            android:layout_height="35dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="@dimen/ic_filter_dimen"
            app:srcCompat="@drawable/ic_arrow_downward_black_24dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:text="@string/rating"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="@dimen/padding_filter_layout"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="@dimen/padding_filter_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:layout_width="@dimen/ic_filter_dimen"
            android:layout_height="35dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="@dimen/ic_filter_dimen"
            app:srcCompat="@drawable/ic_favorite_fill" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:text="@string/sort_favorites"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/popularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="@dimen/padding_filter_layout"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="@dimen/padding_filter_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorites">

        <ImageView
            android:layout_width="@dimen/ic_filter_dimen"
            android:layout_height="35dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="@dimen/ic_filter_dimen"
            app:srcCompat="@drawable/ic_arrow_downward_black_24dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:text="@string/popularity"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/sort_by"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
